
cc_library(
	name = "utility",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_preprocessor//:preprocessor",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_iterator//:iterator"
	],
)
