load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/utility/*.hpp",
]

cc_library(
    name = "utility_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
)

cc_library(
    name = "utility",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [
        ":utility_internal",
        "@boost//preprocessor",
        "@boost//io",
        "@boost//container_hash",
    ],
)
